<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/adjustcomparisonsettings"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/adjust_comparison_settings_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ADJUST COMPARISON SETTINGS"
            android:textAlignment="center"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/yearly_salary_text"
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Yearly Salary"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/yearly_salary_input"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/yearly_bonus_text"
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Yearly Bonus"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/yearly_bonus_input"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/retirement_text"
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Retirement"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/retirement_input"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/restricted_stock_text"
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Restricted Stock"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/restricted_stock_input"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/personalized_learning_and_development_text"
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Personalized Learning &amp; Development"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/personalized_learning_and_development_input"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/family_planning_assistance_text"
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Family Planning Assistance"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/family_planning_assistance_input"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="handleClick"
            android:text="Save" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="handleClick"
            android:text="Cancel" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
